@@ -1,4 +1,4 @@
-$Id: History,v 1.62 2002-08-13 18:34:14 asaim Exp $
+$Id: History,v 1.63 2002-08-19 18:33:29 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Aug 19, 2002 M.Asai (run-V04-01-02)
+- Introducing a new G4Exception scheme
+ Added : G4ExceptionHandler.hh G4ExceptionHandler.cc
+ Modified : G4RunManager.hh G4RunManager.cc
 
 Aug 13, 2002 M.Asai (run-V04-01-01)
 - G4RunManager sets "eventAbortion" flag of G4Event if that particular event is
